--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -6,8 +6,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link active" href="#">Startseite <span class="sr-only">(Du bist hier)</span></a>
-                <a class="nav-item nav-link" href="#">So funktionierts</a>
+                <a class="nav-item nav-link active" href="/">Startseite</a>
             </div>
         </div>
     </div>
