Only notify once, include reflink

--- a/templates/emails/notification.html.twig
+++ b/templates/emails/notification.html.twig
@@ -2,5 +2,7 @@
 <p>Du wirst benachrichtigt, weil <strong>{{ notification.product.title }}</strong> jetzt bei {{ notification.product.price }}€ liegt.</p>
 <p>Du wolltest benachrichtigt werden, sobald dieses Produkt weniger als {{ notification.price }}€ kostet.</p>
 <p>
-    <a href="{{ notification.product.link }}">Zum Produkt</a>
+    <a href="{{ notification.product.link }}?&_encoding=UTF8&tag=pascbeie-21&linkCode=ur2&linkId=8adb8fca1b75fe92404cbab508cc4798&camp=1638&creative=6742">Zum Produkt</a>
 </p>
+
+<p>Du wirst nun für dieses Produkt nicht mehr benachrichtigt - du kannst aber jederzeit eine neue Benachrichtigung erstellen.</p>
